made changes to .gitignore - now hiding .env and jupyter lab checkpoints

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 #ignore the .env file used to for API homework 
+
 .env
+
+# Jupyter Checkpoints
+
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+
+
+# IPython
+
+profile_default/
+ipython_config.py
